--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2 {
   font-size: 1.375rem;
   font-weight: 700;
   color: hsl(218, 44%, 22%);
-  padding-block: .5rem
+  padding-top: .5rem
 }
 
 p {
